methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:3: error: value avance is not a member of Unit
def faireN(c:Color) {setCouleurBrosse(c)avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche();}
                                        ^